<resources>
    <string name="app_name">Higher Lower</string>
    <string name="questionText">Guess if the next throw is going to be lower, equal, or higher.</string>
    <string name="btnLower">Lower</string>
    <string name="btnEqual">Equal</string>
    <string name="btnHigher">Higher</string>
    <string name="lastThrowText">Last Throw: %d</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect...</string>
    <string name="imageViewDescription">Dice</string>
</resources>
